# ai-mcp-toolkit

./: .env.example  .env.server  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CROSS_PLATFORM_SETUP.md  Dockerfile  GPU_ACCELERATION_SETUP.md  GPU_SERVER_OPTIMIZATIONS.md  GPU_UI_IMPLEMENTATION.md  LICENSE  README.md  clean_restart_14b.sh  docker-compose.yml  gpu_model_optimizer.sh  keep_model_warm.sh  optimize_14b_gpu.sh  pyproject.toml  setup.sh  start.sh  switch-environment.sh  switch-model.sh  test-api.sh
configs/templates/: .env.cpu  .env.linux-nvidia  .env.macos-apple-silicon
docs/: CONFIGURATION.md  TESTING.md
src/ai_mcp_toolkit/: __init__.py  cli.py  cli_gpu.py
src/ai_mcp_toolkit/agents/: __init__.py  base_agent.py  diacritic_remover.py  grammar_checker.py  language_detector.py  sentiment_analyzer.py  text_analyzer.py  text_anonymizer.py  text_cleaner.py  text_summarizer.py
src/ai_mcp_toolkit/models/: __init__.py  ollama_client.py
src/ai_mcp_toolkit/server/: __init__.py  http_server.py  mcp_server.py
src/ai_mcp_toolkit/utils/: __init__.py  config.py  gpu_monitor.py  logger.py  url_fetcher.py
ui/: package-lock.json  package.json  tailwind.config.js
ui/src/: app.css  app.html
ui/src/lib/components/: ConversationSidebar.svelte  GPUStatus.svelte  Header.svelte  MarkdownRenderer.svelte  ModelSwitcher.svelte  SafeMarkdownRenderer.svelte  Sidebar.svelte
ui/src/lib/services/: chat-api.js
ui/src/lib/stores/: conversations.js
ui/src/routes/: +layout.svelte  +page.svelte
ui/src/routes/.well-known/appspecific/com.chrome.devtools.json/: +server.js
ui/src/routes/about/: +page.svelte
ui/src/routes/agents/: +page.svelte
ui/src/routes/agents/diacritic-remover/: +page.svelte
ui/src/routes/agents/grammar-checker/: +page.svelte
ui/src/routes/agents/language-detector/: +page.svelte
ui/src/routes/agents/sentiment-analyzer/: +page.svelte
ui/src/routes/agents/text-analyzer/: +page.svelte
ui/src/routes/agents/text-anonymizer/: +page.svelte
ui/src/routes/agents/text-cleaner/: +page.svelte
ui/src/routes/agents/text-summarizer/: +page.svelte
ui/src/routes/api/chat/: +server.js
ui/src/routes/api/chat/conversation/: +server.js
ui/src/routes/api/gpu/health/: +server.js
ui/src/routes/api/gpu/metrics/: +server.js
ui/src/routes/api/gpu/recommendations/: +server.js
ui/src/routes/api/models/switch/: +server.js
ui/src/routes/api/tools/execute/: +server.js
ui/src/routes/chat/: +page.svelte
ui/src/routes/gpu/: +page.svelte
ui/src/routes/settings/: +page.svelte
